--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "vite": "5.0.0",
-    "typescript": "5.3.3",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@vitejs/plugin-react": "4.0.0"
-  }
+  "vite": "5.0.0",
+  "typescript": "5.3.3",
+  "@types/react": "18.2.21",
+  "@types/react-dom": "18.2.7",
+  "@vitejs/plugin-react": "^5.0.0"
+}
 }
